--- a/flappy-bird/css/game.css
+++ b/flappy-bird/css/game.css
@@ -1,19 +1,19 @@
 #game {
     height: 600px;
     background-image: url("../images/sky.png");
-    /*background-position-x: 0px;*/
     position: relative;
+    transition: all .03s;
 }
 
 .bird {
     width: 30px;
     height: 30px;
     background-image: url("../images/birds.png");
-    /*background-position-x: 0px;*/
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    /*top: 235px;*/
+    top: 235px;
+    transition: top .3s;
 }
 
 .start {
@@ -27,7 +27,7 @@
     line-height: 60px;
     font-weight: bolder;
     cursor: pointer;
-    transition: all .5s;
+    transition: all .3s;
 }
 
 .start.white {
@@ -50,6 +50,7 @@
 }
 
 .mark {
+    display: none;
     position: absolute;
     left: 0;
     right: 0;
