--- a/flappy-bird/css/game.css
+++ b/flappy-bird/css/game.css
@@ -3,6 +3,7 @@
     background-image: url("../images/sky.png");
     position: relative;
     transition: all .03s;
+    overflow: hidden;
 }
 
 .bird {
@@ -41,12 +42,14 @@
 }
 
 .score {
+    display: none;
     font-size: 20px;
     color: white;
     font-weight: bolder;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 1;
 }
 
 .mark {
@@ -57,6 +60,7 @@
     top: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, .7);
+    z-index: 2;
 }
 .end{
     position: absolute;
@@ -113,4 +117,18 @@
     font-size: 18px;
     font-weight: bolder;
     cursor: pointer;
+}
+.pipe {
+    width: 52px;
+    position: absolute;
+}
+.pipe.pipe-up{
+    background-image: url("../images/pipe2.png");
+    background-position-y: bottom;
+    top: 0;
+}
+.pipe.pipe-down{
+    background-image: url("../images/pipe1.png");
+    background-position-y: top;
+    bottom: 0;
 }
